fix: disable CORS in auth-service (gateway handles it)